finalized grid layout. issue with footer on smaller screen

--- a/css/about.css
+++ b/css/about.css
@@ -1,10 +1,5 @@
-.body{
-    grid-auto-rows: 1fr;
-}
-
 .content{
-    grid-row-start: 4;
-    grid-column: 5 / 9;
+    grid-area: 2 / 5 / 5 / 9;
     display: flex;
     flex-direction: column;
     align-items: center;
