--- a/css/contact.css
+++ b/css/contact.css
@@ -1,14 +1,10 @@
-.body{
-    grid-auto-rows: 1fr;
-}
-
 .content{
-    grid-row-start: 4;
-    grid-column: 5 / 9;
+    grid-area: 2 / 5 / 6 / 9;
     display: flex;
     flex-direction: column;
+    align-self: center;
+    justify-self: center;
     align-items: center;
-    padding-top: 15%;
 }
 
 button{
